Fixed small grey bar on small screen sizes

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -506,6 +506,11 @@ h5 {
 					About
 ================================================ */
 .About {
+	@media (max-width: 568px){
+		p.description {
+			margin-bottom: 0px;
+		}
+	}
 	.description {
 		position: absolute;
 		top: 0;
